--- a/css/home.css
+++ b/css/home.css
@@ -29,7 +29,7 @@
 
 .logo{
     color: azure;
-    font-family: Orbitron, Segoe UI;
+    font-family: Orbitron, Segoe UI, sans-serif;
     font-size: 40px;
     font-weight: bold;
     text-align: center;
@@ -54,7 +54,7 @@
     padding: 15px;
     border-radius: 10px;
     font-size: 30px; /* Default 18px*/
-    font-family: Orbitron, Segoe UI;
+    font-family: Orbitron, Segoe UI, sans-serif;
     font-weight: bold
   }
   
@@ -81,7 +81,7 @@
 }
 
 .intro01{
-    font-family: Segoe UI;
+    font-family: Segoe UI, sans-serif;
     font-size: 30px;
     font-weight: bold;
     text-align: center;
@@ -93,7 +93,7 @@
     display: flex;
     width: 40%;
     text-align: center;
-    font-family: Segoe UI;
+    font-family: Segoe UI, sans-serif;
     font-size: 22px;
     font-weight: semibold;
     color: azure;
@@ -132,7 +132,7 @@
     position: relative;
     z-index: 10;
     align-items: center;
-    font-family: Orbitron, Segoe UI;
+    font-family: Orbitron, Segoe UI, sans-serif;
     font-size: 40px;
     font-weight: bold;
     text-align: center;
@@ -143,7 +143,7 @@
 .about-me-desc{
     position: absolute;
     z-index: 10;
-    font-family: Segoe UI;
+    font-family: Segoe UI, sans-serif;
     font-size: 30px;
     font-weight: semibold;
     justify-items: left;
@@ -186,7 +186,7 @@
 .contact-desc{
         position: absolute;
         z-index: 10;
-        font-family: Segoe UI;
+        font-family: Segoe UI, sans-serif;
         font-size: 30px;
         font-weight: semibold;
         justify-items: left;
@@ -199,7 +199,7 @@
 .contact-info{
     position: absolute;
     z-index: 10;
-    font-family: Segoe UI;
+    font-family: Segoe UI, sans-serif;
     font-size: 30px;
     font-weight: semibold;
     justify-items: left;
@@ -223,7 +223,7 @@
     margin-left: auto;
     margin-right: auto;
     color: azure;
-    font-family: Segoe UI;
+    font-family: Segoe UI, sans-serif;
     font-weight: bold;
     font-size: 20px;
     text-align: center;
@@ -233,7 +233,7 @@
     margin-left: 30%;
     margin-right: 30%;
     color: azure;
-    font-family: Orbitron, Segoe UI;
+    font-family: Orbitron, Segoe UI, sans-serif;
     font-weight: bold;
     font-size: 20px;
     text-align: center;
