--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 .content{
     background-color: #22272e;
     color: azure;
-    font-family: Orbitron;
+    font-family: Orbitron, Segoe UI, sans-serif;
     font-weight: Bold;
     font-size: 40px;
     text-align: center;
