--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Whole Page */
+/* Whole Page
 
 *{
     padding: 0;
@@ -16,4 +16,4 @@
     font-weight: Bold;
     font-size: 40px;
     text-align: center;
-}
+} */
