Added Social Links

--- a/css/home.css
+++ b/css/home.css
@@ -220,6 +220,21 @@
 
 /* End Contact Section */
 
+/* Start Social Links Section */
+
+.socials{
+    width: 100%;
+    height: 300px;
+    background-color: #22272e;
+}
+
+.social-icon{
+    width: 64px;
+    margin: 10px;
+}
+
+/* End Social Links Section */
+
 /* Start Footer Section */
 
 .footer{
