--- a/css/home.css
+++ b/css/home.css
@@ -32,13 +32,13 @@
 
 .header{
     background: #2d333b;
-    height: 60px;
+    height: 4vw;
     width: 100%;
+    line-height: 1vw;
 }
 
-.logo{
-    text-align: center;
-    line-height: 10px;
+.header-logo{
+    width: 16vw;
 }
 
 /*  End Header Section */
@@ -53,7 +53,7 @@
     z-index: 99;
     border: none;
     outline: none;
-    background-color: #707070;
+    background-color: #424242;
     color: white;
     cursor: pointer;
     padding: 15px;
@@ -73,19 +73,19 @@
 
 .bio-short{
     background-color: #22272e;
-    height: 544px;
     width: 100%;
 }
 
-.bio-short-logo{
+.sgd-logo{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border: 6px solid #707070;
-    border-radius: 62px;
+    border: 2px solid #424242;
+    border-radius: 3vw;
+    width: 10vw;
 }
 
-.intro01{
+.intro{
     font-family: Open Sans, sans-serif;
     font-size: 30px;
     font-weight: bold;
@@ -269,3 +269,9 @@
 }
 
 /* End Footer Section */
+
+/* Generic Line Break Heights */
+
+.br-2vw{
+    line-height: 2vw;
+}
