--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 /* Add Orbitron Bold Font*/
 
-@font-face {
+/*@font-face {
     font-family: 'Orbitron';
     font-style: bold;
     font-weight: 700;
@@ -16,6 +16,27 @@
     font-display: fallback;
     src: local('Open Sans'), local('Open Sans Bold'), local('Open-Sans-Bold'), url(OpenSans-Bold.ttf) format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}*/
+
+@font-face {
+    src: url('https://assets.spacegamedev.com/css/fonts/Orbitron-VariableFont_wght.ttf');
+    font-family:'Orbitron';
+    font-style: normal;
+    font-weight: 1 1000;
+}
+
+@font-face {
+    src: url('https://assets.spacegamedev.com/css/fonts/OpenSans-VariableFont_wdth,wght.ttf');
+    font-family:'Open Sans';
+    font-style: normal;
+    font-weight: 1 1000;
+}
+
+@font-face {
+    src: url('https://assets.spacegamedev.com/css/fonts/OpenSans-Italic-VariableFont_wdth,wght.ttf');
+    font-family:'Open Sans';
+    font-style: italic;
+    font-weight: 1 1000;
 }
 
 /* Whole Page */
