--- a/css/maintenance.css
+++ b/css/maintenance.css
@@ -12,8 +12,9 @@
 .avatar{
     margin-left: auto;
     margin-right: auto;
-    border: 6px solid #707070;
-    border-radius: 62px;
+    border: 3px solid #424242;
+    border-radius: 2vw;
+    width: 16vw;
 }
 
 .content{
@@ -21,7 +22,7 @@
     color: azure;
     font-family: Orbitron, Segoe UI, sans-serif;
     font-weight: Bold;
-    font-size: 40px;
+    font-size: 2vw;
     text-align: center;
     margin-left: 20%;
     margin-right: 20%;
