--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,5 @@
+/* Copyright (©) 2022 - 2023  Jesse Hodgson. All Rights Reserved */
+
 /* Import font faces from the asset server */
 
 @font-face {
@@ -18,6 +20,13 @@
     src: url('https://assets.spacegamedev.com/css/fonts/OpenSans-Italic-VariableFont_wdth,wght.ttf');
     font-family:'Open Sans';
     font-style: italic;
+    font-weight: 1 1000;
+}
+
+@font-face {
+    src: url('https://assets.spacegamedev.com/css/fonts/Comfortaa-VariableFont_wght.ttf');
+    font-family:'Comforta';
+    font-style: normal;
     font-weight: 1 1000;
 }
 
