--- a/css/home.css
+++ b/css/home.css
@@ -38,6 +38,7 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    transition: 0.5s;
 }
 
 body{
@@ -137,15 +138,17 @@ body.light .header-logo{
     background-color: var(--light-accent);
 }
 
+.theme-icon{
+    width: 32px;
+}
+
 .btn-toggle{
+    display: flex;
     position: absolute;
-    color: var(--dark-text);
     background-color: var(--dark-accent);
-    padding: 6px 10px;
+    padding: 5px;
     top: 20px;
     right: 20px;
-    font-family: Comfortaa, Open Sans, sans-serif;
-    font-size: 20px;
     border-radius: 5px;
     transition: 0.5s;
 }
@@ -163,6 +166,102 @@ body.light .btn-toggle:hover{
 }
 
 /*  End Header Section */
+
+/* Sidebar */
+
+    /* The sidebar menu */
+    .sidebar {
+        height: 100%; /* 100% Full-height */
+        width: 0; /* 0 width - change this with JavaScript */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Stay on top */
+        top: 0;
+        left: 0;
+        background-color: var(--dark-foreground); /* Black*/
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 60px; /* Place content 60px from the top */
+        transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+        border: 1px solid var(--dark-accent);
+      }
+
+    body.light .sidebar{
+        background-color: var(--light-foreground);
+        border: 1px solid var(--light-accent);
+    }
+
+      /* The sidebar links */
+      .sidebar-link {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: var(--dark-text);
+        display: block;
+        transition: 0.3s;
+        font-family: Comfortaa, Open sans, sans-serif;
+      }
+
+      body.light .sidebar-link{
+        color: var(--light-text);
+      }
+
+      /* Position and style the close button (top right corner) */
+      .sidebar .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+      }
+
+      /* The button used to open the sidebar */
+      .openbtn {
+        display: flex;
+        top: 15px;
+        position: absolute;
+        left: 20px;
+        font-size: 20px;
+        cursor: pointer;
+        background-color: var(--dark-accent);
+        padding: 5px;
+        border: none;
+        border-radius: 5px;
+        transition: 0.5s;
+      }
+
+      .openbtn-img{
+        width: 40px;
+      }
+
+      .openbtn:hover{
+        background-color: #999999;
+      }
+
+      body.light .openbtn{
+        background-color: var(--light-accent);
+      }
+
+      body.light .openbtn:hover{
+        background-color: var(--light-border);
+      }
+
+      /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+      #main {
+        transition: margin-left .5s; /* If you want a transition effect */
+        padding: 20px;
+      }
+
+      /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+      @media screen and (max-height: 450px) {
+        .sidebar {padding-top: 15px;}
+        .sidebar a {font-size: 18px;}
+      }
+
+      .closenavbutton{
+        position: absolute;
+        top: 15px;
+        width: 30px;
+        right: 1px;
+      }
 
 /* Start Back to Top button modified from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
 
@@ -242,113 +341,3 @@ body.light .about-short{
     border-radius: 20px;
     width: 80%;
 }
-
-/* Sidebar */
-
-/* The sidebar menu */
-.sidebar {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0;
-    left: 0;
-    background-color: var(--dark-foreground); /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
-    border: 1px solid var(--dark-accent);
-  }
-  
-  /* The sidebar links */
-  .sidebar-link {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .sidebar-link :hover {
-    color: #f1f1f1;
-  }
-  
-  /* Position and style the close button (top right corner) */
-  .sidebar .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
-  
-  /* The button used to open the sidebar */
-  .openbtn {
-    display: flex;
-    top: 15px;
-    position: absolute;
-    left: 20px;
-    font-size: 20px;
-    cursor: pointer;
-    background-color: var(--dark-accent);
-    padding: 5px;
-    border: none;
-    border-radius: 5px;
-    transition: 0.5s;
-  }
-
-  .openbtn-img{
-    width: 40px;
-  }
-  
-  .openbtn:hover {
-    background-color: #999999;
-  }
-  
-  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-  #main {
-    transition: margin-left .5s; /* If you want a transition effect */
-    padding: 20px;
-  }
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidebar {padding-top: 15px;}
-    .sidebar a {font-size: 18px;}
-  }
-
-  .closenavbutton{
-    position: absolute;
-    top: 15px;
-    width: 30px;
-    right: 1px;
-  }
-
-  /*
-  
-.hamburger-menu{
-    top: 20px;
-    position: absolute;
-    width: 40px;
-    left: 20px;
-    background-color: var(--dark-accent);
-    border-radius: 5px;
-    padding: 5px;
-    transition: 0.5s;
-}
-
-body.light .hamburger-menu{
-    background-color: var(--light-accent);
-}
-
-.hamburger-menu:hover{
-    background-color: #999999;
-}
-
-body.light .hamburger-menu:hover{
-    background-color: var(--light-border);
-}
-
-*/
