--- a/css/home.css
+++ b/css/home.css
@@ -91,8 +91,15 @@ body.light ::selection {
 .header{
     background-color: var(--dark-foreground);
     height: 80px;
+    width: 100%;
     border: 1px solid var(--dark-accent);
+    display: flex;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
 }
+
 
 body.light .header{
     background-color: var(--light-foreground);
@@ -123,8 +130,10 @@ body.light .hamburger-menu:hover{
 }
 
 .header-logo{
+    display: flex;
     position: absolute;
     top: 8px;
+    left: 50%;
     -ms-transform: translate(-50%);
     transform: translate(-50%);
     width: 64px;
@@ -166,31 +175,101 @@ body.light .btn-toggle:hover{
 
 /*  End Header Section */
 
-/* Start Back to Top button modified from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
+/* Sidebar */
 
-#myBtn {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    border: none;
-    outline: none;
-    background-color: #424242;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 10px;
-    font-size: 30px; /* Default 18px*/
-    font-family: Orbitron, Open Sans, sans-serif;
-    font-weight: bold
-  }
-  
-  #myBtn:hover {
-    background-color: #5a5a5a;
-  }
+    /* The sidebar menu */
+    .sidebar {
+        height: 100%; /* 100% Full-height */
+        width: 0; /* 0 width - change this with JavaScript */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Stay on top */
+        top: 0;
+        left: 0;
+        background-color: var(--dark-foreground); /* Black*/
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 60px; /* Place content 60px from the top */
+        transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+        border: 1px solid var(--dark-accent);
+      }
 
-/* End Back to Top button */
+    body.light .sidebar{
+        background-color: var(--light-foreground);
+        border: 1px solid var(--light-accent);
+    }
+
+      /* The sidebar links */
+      .sidebar-link {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: var(--dark-text);
+        display: block;
+        transition: 0.3s;
+        font-family: Comfortaa, Open sans, sans-serif;
+      }
+
+      body.light .sidebar-link{
+        color: var(--light-text);
+      }
+
+      /* Position and style the close button (top right corner) */
+      .sidebar .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+      }
+
+      /* The button used to open the sidebar */
+      .openbtn {
+        display: flex;
+        top: 15px;
+        position: absolute;
+        left: 20px;
+        font-size: 20px;
+        cursor: pointer;
+        background-color: var(--dark-accent);
+        padding: 5px;
+        border: none;
+        border-radius: 5px;
+        transition: 0.5s;
+      }
+
+      .openbtn-img{
+        width: 40px;
+      }
+
+      .openbtn:hover{
+        background-color: #999999;
+      }
+
+      body.light .openbtn{
+        background-color: var(--light-accent);
+      }
+
+      body.light .openbtn:hover{
+        background-color: var(--light-border);
+      }
+
+      /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+      #main {
+        transition: margin-left .5s; /* If you want a transition effect */
+        padding: 20px;
+      }
+
+      /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+      @media screen and (max-height: 450px) {
+        .sidebar {padding-top: 15px;}
+        .sidebar a {font-size: 18px;}
+      }
+
+      .closenavbutton{
+        position: absolute;
+        top: 15px;
+        width: 30px;
+        right: 1px;
+      }
 
 /*  Start Bio-Short Section */
 
@@ -359,7 +438,7 @@ body.light .socials-p{
 
 .footer{
     background-color: var(--dark-foreground);
-    height: 320px;
+    height: 340px;
     line-height: 20px;
     border: 1px solid var(--dark-accent);
     color: var(--dark-text);
@@ -372,99 +451,3 @@ body.light .footer{
     background-color: var(--light-foreground);
     border: var(--light-accent);
 }
-
-/* Sidebar */
-
-    /* The sidebar menu */
-    .sidebar {
-        height: 100%; /* 100% Full-height */
-        width: 0; /* 0 width - change this with JavaScript */
-        position: fixed; /* Stay in place */
-        z-index: 1; /* Stay on top */
-        top: 0;
-        left: 0;
-        background-color: var(--dark-foreground); /* Black*/
-        overflow-x: hidden; /* Disable horizontal scroll */
-        padding-top: 60px; /* Place content 60px from the top */
-        transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
-        border: 1px solid var(--dark-accent);
-      }
-
-    body.light .sidebar{
-        background-color: var(--light-foreground);
-        border: 1px solid var(--light-accent);
-    }
-
-      /* The sidebar links */
-      .sidebar-link {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: var(--dark-text);
-        display: block;
-        transition: 0.3s;
-        font-family: Comfortaa, Open sans, sans-serif;
-      }
-
-      body.light .sidebar-link{
-        color: var(--light-text);
-      }
-
-      /* Position and style the close button (top right corner) */
-      .sidebar .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
-      }
-
-      /* The button used to open the sidebar */
-      .openbtn {
-        display: flex;
-        top: 15px;
-        position: absolute;
-        left: 20px;
-        font-size: 20px;
-        cursor: pointer;
-        background-color: var(--dark-accent);
-        padding: 5px;
-        border: none;
-        border-radius: 5px;
-        transition: 0.5s;
-      }
-
-      .openbtn-img{
-        width: 40px;
-      }
-
-      .openbtn:hover{
-        background-color: #999999;
-      }
-
-      body.light .openbtn{
-        background-color: var(--light-accent);
-      }
-
-      body.light .openbtn:hover{
-        background-color: var(--light-border);
-      }
-
-      /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-      #main {
-        transition: margin-left .5s; /* If you want a transition effect */
-        padding: 20px;
-      }
-
-      /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-      @media screen and (max-height: 450px) {
-        .sidebar {padding-top: 15px;}
-        .sidebar a {font-size: 18px;}
-      }
-
-      .closenavbutton{
-        position: absolute;
-        top: 15px;
-        width: 30px;
-        right: 1px;
-      }
