--- a/css/home.css
+++ b/css/home.css
@@ -25,7 +25,7 @@
 
 @font-face {
     src: url('https://assets.spacegamedev.com/css/fonts/Comfortaa-VariableFont_wght.ttf');
-    font-family:'Comforta';
+    font-family:'Comfortaa';
     font-style: normal;
     font-weight: 1 1000;
 }
@@ -35,258 +35,419 @@
 *{
     padding: 0;
     margin: 0;
-    text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    transition: 1s;
+}
+
+body{
+    background: var(--dark-background);
+}
+
+body.light{
+    background: var(--light-background);
+}
+
+/* Colour palette */
+
+:root{
+    --dark-background: #22272e;
+    --dark-foreground: #2d333b;
+    --dark-accent: #414141;
+    --dark-text: #f0ffff;
+    --dark-border: #999999;
+
+    --light-background: #ddeeeb;
+    --light-foreground: #a5aeb1;
+    --light-accent: #83898d;
+    --light-text: #1c1c1d;
+    --light-border: #414141;
+}
+
+/* Text selection */
+
+::-moz-selection { /* Code for Firefox */
+    color: #22272e;
+    background: #f0ffff;
+  }
+  
+::selection {
+  color: #22272e;
+  background: #f0ffff;
+}
+
+body.light ::-moz-selection{ /* Code for Firefox */
+    color: #928c8c;
+    background: #1d68a4;
+  }
+  
+body.light ::selection {
+  color: #928c8c;
+  background: #1d68a4;
 }
 
 /*  Start Header Section */
 
 .header{
-    background: #2d333b;
-    height: 4vw;
+    background-color: var(--dark-foreground);
+    height: 80px;
     width: 100%;
-    line-height: 1vw;
+    border: 1px solid var(--dark-accent);
+    display: flex;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+}
+
+
+body.light .header{
+    background-color: var(--light-foreground);
+    border: 1px solid var(--light-accent);
+}
+
+.hamburger-menu{
+    top: 20px;
+    position: absolute;
+    width: 40px;
+    left: 20px;
+    background-color: var(--dark-accent);
+    border-radius: 5px;
+    padding: 5px;
+    transition: 0.5s;
+}
+
+body.light .hamburger-menu{
+    background-color: var(--light-accent);
+}
+
+.hamburger-menu:hover{
+    background-color: #999999;
+}
+
+body.light .hamburger-menu:hover{
+    background-color: var(--light-border);
 }
 
 .header-logo{
-    width: 16vw;
+    display: flex;
+    position: absolute;
+    top: 8px;
+    left: 50%;
+    -ms-transform: translate(-50%);
+    transform: translate(-50%);
+    width: 64px;
+    background-color: var(--dark-accent);
+    padding: 5px;
+    border-radius: 12px;
+}
+
+body.light .header-logo{
+    background-color: var(--light-accent);
+}
+
+.theme-icon{
+    width: 32px;
+}
+
+.btn-toggle{
+    display: flex;
+    position: absolute;
+    background-color: var(--dark-accent);
+    padding: 5px;
+    top: 20px;
+    right: 20px;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.btn-toggle:hover{
+    background-color: #999999;
+}
+
+body.light .btn-toggle{
+    background-color: var(--light-accent);
+}
+
+body.light .btn-toggle:hover{
+    background-color: var(--dark-accent);
 }
 
 /*  End Header Section */
 
-/* Start Back to Top button modified from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
+/* Sidebar */
 
-#myBtn {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    border: none;
-    outline: none;
-    background-color: #424242;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 10px;
-    font-size: 30px; /* Default 18px*/
-    font-family: Orbitron, Open Sans, sans-serif;
-    font-weight: bold
-  }
-  
-  #myBtn:hover {
-    background-color: #5a5a5a;
-  }
+    /* The sidebar menu */
+    .sidebar {
+        height: 100%; /* 100% Full-height */
+        width: 0; /* 0 width - change this with JavaScript */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Stay on top */
+        top: 0;
+        left: 0;
+        background-color: var(--dark-foreground); /* Black*/
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top: 60px; /* Place content 60px from the top */
+        transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+        border: 1px solid var(--dark-accent);
+      }
 
-/* End Back to Top button */
+    body.light .sidebar{
+        background-color: var(--light-foreground);
+        border: 1px solid var(--light-accent);
+    }
+
+      /* The sidebar links */
+      .sidebar-link {
+        padding: 8px 8px 8px 32px;
+        text-decoration: none;
+        font-size: 25px;
+        color: var(--dark-text);
+        display: block;
+        transition: 0.3s;
+        font-family: Comfortaa, Open sans, sans-serif;
+      }
+
+      body.light .sidebar-link{
+        color: var(--light-text);
+      }
+
+      /* Position and style the close button (top right corner) */
+      .sidebar .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+      }
+
+      /* The button used to open the sidebar */
+      .openbtn {
+        display: flex;
+        top: 15px;
+        position: absolute;
+        left: 20px;
+        font-size: 20px;
+        cursor: pointer;
+        background-color: var(--dark-accent);
+        padding: 5px;
+        border: none;
+        border-radius: 5px;
+        transition: 0.5s;
+      }
+
+      .openbtn-img{
+        width: 40px;
+      }
+
+      .openbtn:hover{
+        background-color: #999999;
+      }
+
+      body.light .openbtn{
+        background-color: var(--light-accent);
+      }
+
+      body.light .openbtn:hover{
+        background-color: var(--light-border);
+      }
+
+      /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+      #main {
+        transition: margin-left .5s; /* If you want a transition effect */
+        padding: 20px;
+      }
+
+      /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+      @media screen and (max-height: 450px) {
+        .sidebar {padding-top: 15px;}
+        .sidebar a {font-size: 18px;}
+      }
+
+      .closenavbutton{
+        position: absolute;
+        top: 15px;
+        width: 30px;
+        right: 1px;
+      }
 
 /*  Start Bio-Short Section */
 
 .bio-short{
-    background-color: #22272e;
     width: 100%;
 }
 
 .sgd-logo{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border: 2px solid #424242;
-    border-radius: 3vw;
-    width: 10vw;
+    width: 256px;
+    border: 2px solid var(--dark-accent);
+    border-radius: 40px;
+}
+
+body.light .sgd-logo{
+    border: 2px solid var(--light-accent);
 }
 
 .intro{
-    font-family: Open Sans, sans-serif;
-    font-size: 1.9vw;
+    color: var(--dark-text);
+    font-family: Comfortaa, Open Sans, sans-serif;
+    font-size: 40px;
     font-weight: bold;
-    text-align: center;
-    color: azure;
-    line-height: 40px;
+    text-shadow: 4px 2px 4px #00000025;
+}
+
+body.light .intro{
+    color: var(--light-text);
+}
+
+body.light{
+    color: var(--light-text);
 }
 
 .about-short{
-    display: flex;
-    width: 40vw;
-    text-align: center;
-    font-family: Open Sans, sans-serif;
-    font-size: 1.5vw;
-    font-weight: semibold;
-    color: azure;
-    line-height: 125%;
-    line-break: 20vw;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: left;
+    margin-left: 10%;
+    margin-right: 10%;
+    color: var(--dark-text);
+    font-family: Comfortaa, Opens Sans, sans-serif;
+    font-size: 22px;
+    line-height: 42px;
+}
+
+body.light .about-short{
+    color: var(--light-text);
 }
 
 /*  End Bio-Short Section */
 
-/* Vertical Border */
-
-.vert-border-section{
-    width: 100%;
-    background-color: #22272e;
+.vertical-section-divider{
+    border: 5px solid var(--dark-border);
+    border-radius: 20px;
+    width: 80%;
 }
 
-.vert-border{
-    margin-left: auto;
-    margin-right: auto;
-    width: 90vw;
-    z-index: 10;
-    border: 0.5vw solid #494e58;
-    border-radius: 10px
-}
-
-/* End Vertical Borders */
-
-/* Start About-Me Section */
-
-.about-me{
-    height: 25vw;
-    width: 100%;
-    background-color: #22272e;
-}
-
-.about-me-header{
-    position: relative;
-    z-index: 10;
-    align-items: center;
+.about-header{
     font-family: Orbitron, Open Sans, sans-serif;
-    font-size: 2.5vw;
+    font-size: 50px;
     font-weight: bold;
-    text-align: center;
-    color: azure;
+    color: var(--dark-text);
+    text-shadow: 4px 2px 4px #00000025;
 }
 
-.about-me-desc{
-    position: absolute;
-    z-index: 10;
-    font-family: Open Sans, sans-serif;
-    font-size: 1.5vw;
-    font-weight: semibold;
-    justify-items: left;
+body.light .about-header{
+    color: var(--light-text);
+}
+
+.about-me-bio{
+    color: var(--dark-text);
+    font-family: Comfortaa, Open Sans, sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: light;
     text-align: left;
-    color: azure;
-    margin-left: 10vw;
-    margin-right: 10vw;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
-/* End About-Me Section */
-
-/* Start Apps Section*/
-
-.apps{
-    width: 100%;
-    background-color: #22272e;
+body.light .about-me-bio{
+    color: var(--light-text);
 }
 
-.apps-img{
-    width: 35vw;
+.standard-link{
+    color: #1d68a4;
 }
 
-/* End Apps Section*/
-
-/* Start Projects Section */
-
-.projects{
-    width: 100%;
-    background-color: #22272e;
+.experience-header{
+    font-family: Orbitron, Open Sans, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    color: var(--dark-text);
+    text-shadow: 4px 2px 4px #00000025;
 }
 
-.fprop-project-card{
-    width: 30vw;
+body.light .experience-header{
+    color: var(--light-text);
 }
 
-/* End Projects Section */
-
-/* Start Contact Section */
-
-.contact{
-    width: 100%;
-    height: 25vw;
-    background-color: #22272e;
-}
-
-.contact-desc{
-    position: absolute;
-    z-index: 10;
-    font-family: Open Sans, sans-serif;
-    font-size: 1.5vw;
-    font-weight: semibold;
-    justify-items: left;
+.skills{
+    color: var(--dark-text);
+    font-family: Comfortaa, Open Sans, sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: light;
     text-align: left;
-    color: azure;
-    margin-left: 10vw;
-    margin-right: 10vw;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
-/* End Contact Section */
-
-/* Start Social Links Section */
-
-.socials{
-    width: 100%;
-    height: 20vw;
-    background-color: #22272e;
+body.light .skills{
+    color: var(--light-text);
 }
 
-.social-icon{
-    width: 4vw; /* 64px */
-    margin: 0.5vw; /* 10px */
+.contact-header{
+    font-family: Orbitron, Open Sans, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    color: var(--dark-text);
+    text-shadow: 4px 2px 4px #00000025;
 }
 
-/* End Social Links Section */
+body.light .contact-header{
+    color: var(--light-text);
+}
 
-/* Start Footer Section */
+.contact-p{
+    color: var(--dark-text);
+    font-family: Comfortaa, Open Sans, sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: light;
+    text-align: left;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+body.light .contact-p{
+    color: var(--light-text);
+}
+
+.socials-header{
+    font-family: Orbitron, Open Sans, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    color: var(--dark-text);
+    text-shadow: 4px 2px 4px #00000025;
+}
+
+body.light .socials-header{
+    color: var(--light-text);
+}
+
+.socials-p{
+    color: var(--dark-text);
+    font-family: Comfortaa, Open Sans, sans-serif;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: light;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+body.light .socials-p{
+    color: var(--light-text);
+}
 
 .footer{
-    background: #2d333b;
-    height: 15vw;
-    width: 100%;
+    background-color: var(--dark-foreground);
+    height: 340px;
+    line-height: 20px;
+    border: 1px solid var(--dark-accent);
+    color: var(--dark-text);
+    font-family: Comfortaa, Open Sans, sans-serif;
+    font-size: 15px;
 }
 
-.footertext1{
-    margin-left: auto;
-    margin-right: auto;
-    color: azure;
-    font-family: Open Sans, sans-serif;
-    font-weight: bold;
-    font-size: 1vw;
-    text-align: center;
-}
-
-.cf-attrib{
-    margin-left: 30%;
-    margin-right: 30%;
-    color: azure;
-    font-family: Orbitron, Open Sans, sans-serif;
-    font-weight: bold;
-    font-size: 1vw;
-    text-align: center;
-}
-
-.cf-atrrib-text{
-    display: flex;
-}
-
-.cf-logo-bottom{
-    text-align: center;
-    width: 20vw;
-}
-
-/* End Footer Section */
-
-/* Generic Line Break Heights */
-
-.br-1vw{
-    line-height: 2vw;
-}
-
-.br-2vw{
-    line-height: 2vw;
-}
-
-.br-4vw{
-    line-height: 4vw;
+body.light .footer{
+    color: var(--light-text);
+    background-color: var(--light-foreground);
+    border: var(--light-accent);
 }
