--- a/css/support.css
+++ b/css/support.css
@@ -3,31 +3,35 @@
 /* Import font faces from the asset server */
 
 @font-face {
-    src: url('https://assets.spacegamedev.com/css/fonts/Orbitron-VariableFont_wght.ttf');
+    src: url('https://assets.spacegamedev.com/css/fonts/Orbitron-VariableFont_wght.woff2');
     font-family:'Orbitron';
     font-style: normal;
     font-weight: 1 1000;
+    font-display: swap;
 }
 
 @font-face {
-    src: url('https://assets.spacegamedev.com/css/fonts/OpenSans-VariableFont_wdth,wght.ttf');
+    src: url('https://assets.spacegamedev.com/css/fonts/OpenSans-VariableFont_wdth,wght.woff2');
     font-family:'Open Sans';
     font-style: normal;
     font-weight: 1 1000;
+    font-display: swap;
 }
 
 @font-face {
-    src: url('https://assets.spacegamedev.com/css/fonts/OpenSans-Italic-VariableFont_wdth,wght.ttf');
+    src: url('https://assets.spacegamedev.com/css/fonts/OpenSans-Italic-VariableFont_wdth,wght.woff2');
     font-family:'Open Sans';
     font-style: italic;
     font-weight: 1 1000;
+    font-display: swap;
 }
 
 @font-face {
-    src: url('https://assets.spacegamedev.com/css/fonts/Comfortaa-VariableFont_wght.ttf');
+    src: url('https://assets.spacegamedev.com/css/fonts/Comfortaa-VariableFont_wght.woff2');
     font-family:'Comfortaa';
     font-style: normal;
     font-weight: 1 1000;
+    font-display: swap;
 }
 
 /* Whole Page */
@@ -137,6 +141,7 @@ body.light .hamburger-menu:hover{
     -ms-transform: translate(-50%);
     transform: translate(-50%);
     width: 64px;
+    height: 64px;
     background-color: var(--dark-accent);
     padding: 5px;
     border-radius: 12px;
@@ -147,6 +152,7 @@ body.light .header-logo{
 }
 
 .theme-icon{
+    width: 32px;
     width: 32px;
 }
 
@@ -238,6 +244,7 @@ body.light .btn-toggle:hover{
 
       .openbtn-img{
         width: 40px;
+        height: 40px;
       }
 
       .openbtn:hover{
@@ -268,6 +275,7 @@ body.light .btn-toggle:hover{
         position: absolute;
         top: 15px;
         width: 30px;
+        height: 30px;
         right: 1px;
       }
 
