--- a/css/support.css
+++ b/css/support.css
@@ -55,17 +55,19 @@ body.light{
 /* Colour palette */
 
 :root{
-    --dark-background: #22272e;
-    --dark-foreground: #2d333b;
-    --dark-accent: #414141;
-    --dark-text: #f0ffff;
-    --dark-border: #999999;
+  --dark-background: #22272e;
+  --dark-foreground: #2d333b;
+  --dark-accent: #414141;
+  --dark-text: #f0ffff;
+  --dark-border: #999999;
+  --sgd-blue: #3B96CE; /* #1d68a4 */
 
-    --light-background: #ddeeeb;
-    --light-foreground: #a5aeb1;
-    --light-accent: #83898d;
-    --light-text: #1c1c1d;
-    --light-border: #414141;
+  --light-background: #ddeeeb;
+  --light-foreground: #a5aeb1;
+  --light-accent: #83898d;
+  --light-text: #1c1c1d;
+  --light-border: #414141;
+  --light-sgd-blue: #24608E;
 }
 
 /* Text selection */
@@ -304,10 +306,14 @@ body.light .support-p{
 }
 
 .portal-link{
-    background-color: #1d68a4;
+    background-color: var(--sgd-blue);
     color: #f0ffff;
     padding: 10px;
     border-radius: 6px;
+}
+
+body.light .portal-link{
+  background-color: var(--light-sgd-blue);
 }
 
 .footer{
@@ -327,9 +333,12 @@ body.light .footer{
 }
 
 .standard-link{
-    color: #1d68a4;
+    color: var(--sgd-blue);
 }
 
+body.light .standard-link{
+  color: var(--light-sgd-blue);
+}
 .vertical-section-divider{
     border: 5px solid var(--dark-border);
     border-radius: 20px;
