Attempt to get CLS lower

--- a/css/projects.css
+++ b/css/projects.css
@@ -49,6 +49,7 @@ body.light .project-desc{
 .charles-project{
     background-color: var(--dark-foreground);
     width: 400px;
+    height: 250px;
     padding: 10px;
     border: 2px solid var(--light-accent);
     border-radius: 20px;
