--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
     font-family:'Orbitron';
     font-style: normal;
     font-weight: 1 1000;
-    font-display: swap;
+    font-display: optional;
 }
 
 @font-face {
@@ -15,7 +15,7 @@
     font-family:'Open Sans';
     font-style: normal;
     font-weight: 1 1000;
-    font-display: swap;
+    font-display: optional;
 }
 
 @font-face {
@@ -23,7 +23,7 @@
     font-family:'Open Sans';
     font-style: italic;
     font-weight: 1 1000;
-    font-display: swap;
+    font-display: optional;
 }
 
 @font-face {
@@ -31,7 +31,7 @@
     font-family:'Comfortaa';
     font-style: normal;
     font-weight: 1 1000;
-    font-display: swap;
+    font-display: optional;
 }
 
 /* Whole Page */
@@ -115,6 +115,7 @@ body.light .header{
     top: 20px;
     position: absolute;
     width: 40px;
+    height: 40px;
     left: 20px;
     background-color: var(--dark-accent);
     border-radius: 5px;
