--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ body.light{
     --light-accent: #83898d;
     --light-text: #1c1c1d;
     --light-border: #414141;
-    --light-sgd-blue: #226fb8;
+    --light-sgd-blue: #004483;
 }
 
 /* Text selection */
